<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="5">

        <ImageView
            android:id="@+id/fragm_post_detail_iv_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/logo_deffault"/>

        <TextView
            android:id="@+id/fragm_post_detail_txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragm_post_detail_txt_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/author"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragm_post_detail_txt_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragm_post_detail_txt_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/comments"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragm_post_detail_txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/date"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>